# MicroMouse

./: .gitignore  .gitmodules
3D/: GY-91_MPU9250+BMP280 - Basic.asm  Mount.par  Mount.stl  Mount.stp  Side_wall_L.par  Side_wall_L.stl  Side_wall_L.stp  Side_wall_R.par  Side_wall_R.stl  Side_wall_R.stp  Wheel.par  desktop.ini  gears_micromouse.asm  main_board.asm  main_board.step  main_board.stl  main_board_v2.step  motor_gear.par  motor_gear2.stp  wheel_w_gear_2.stp  wheel_without_gear.stp
FEIStyle/: FEIstyle.cls  example_paper.bcf  example_paper.tex
FEIStyle/includes/: attachmentB.tex  bibliography.bib  (+4 more)
PCB/: main_board.step
RiadenieProjektu/: .gitignore  FEIstyle.cls  example_paper.tex
code/: vypocet uhla rotacie.py
code/esp_code/components/Tasks/: CMakeLists.txt  meas_data.h  motor_driver.h  task_acquire.c  task_communication.c  task_control.c  task_control.cpp  task_meas.c  task_meas.cpp  task_udp.cpp
code/esp_code/components/driver_tof/: CMakeLists.txt  tof.c  tof.h
code/esp_code/components/driver_tof/core/inc/: vl53l1_api_calibration.h  vl53l1_api_core.h  vl53l1_api_strings.h  vl53l1_core.h  vl53l1_core_support.h  vl53l1_error_codes.h  vl53l1_error_strings.h  vl53l1_ll_def.h  vl53l1_nvm_map.h  vl53l1_preset_setup.h  vl53l1_register_map.h  vl53l1_register_settings.h  vl53l1_register_structs.h
code/esp_code/components/driver_tof/core/src/: vl53l1_api.c  vl53l1_api_calibration.c  vl53l1_api_core.c  vl53l1_api_preset_modes.c  vl53l1_api_strings.c  vl53l1_core.c  vl53l1_core_support.c  vl53l1_register_funcs.c  vl53l1_silicon_core.c
code/esp_code/components/driver_tof/platform/inc/: vl53l1_platform_user_config.h  vl53l1_platform_user_data.h  vl53l1_platform_user_defines.h  vl53l1x.h
code/esp_code/components/driver_tof/platform/src/: vl53l1_platform.c
plotter/: .gitignore
udp_client/: sdkconfig
udp_client1/: sdkconfig  sdkconfig.old
udp_server/: sdkconfig  sdkconfig.old
(+212 files in other folders)
